--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,16 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "illuminate/cookie": "^5.8",
+        "illuminate/session": "^5.8",
         "laravel/lumen-framework": "5.8.*",
         "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
         "phpunit/phpunit": "^7.0",
-        "mockery/mockery": "^1.0"
+        "mockery/mockery": "^1.0",
+        "tymon/jwt-auth": "1.*"
     },
     "autoload": {
         "classmap": [
