--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "illuminate/session": "^5.8",
         "laravel/lumen-framework": "5.8.*",
         "spatie/laravel-http-logger": "^1.4",
-        "vlucas/phpdotenv": "^3.3"
+        "vlucas/phpdotenv": "^3.3",
+        "ext-json": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
