--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "ext-json": "*",
+        "firebase/php-jwt": "^5.0",
         "illuminate/cookie": "^5.8",
         "illuminate/session": "^5.8",
         "laravel/lumen-framework": "5.8.*",
         "spatie/laravel-http-logger": "^1.4",
-        "vlucas/phpdotenv": "^3.3",
-        "ext-json": "*"
+        "vlucas/phpdotenv": "^3.3"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
